fix:scrollbar-overflow

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -43,12 +43,12 @@
   }
 }
 
-.main {
+/* .main {
   height: 100vh;
   display: flex;
 }
 .leftSide {
-  width: 20%;
+  width: 15%;
 }
 
 .rightSide {
@@ -56,4 +56,4 @@
   flex-direction: column;
   justify-content: space-between;
   background: linear-gradient(180deg, rgba(37, 37, 37, 0.84) 0%, #191919 100%);
-}
+} */
